# FamilyTreeLib

./: .gitignore  README.md  pyproject.toml
src/familytreelib/: __init__.py
src/familytreelib/pymongo/: family.py  user.py
src/familytreelib/tree/: base_model.py  ete3_model.py  graphviz_model.py  igraph_model.py  networkx_model.py  treelib_model.py
src/familytreelib/utils/: temp_file.py
tests/: mongo.py  treelib_test.py
tests/api/: app.py  router.py  test_router.http
tests/unit/: test_ete3.py  test_graphvizlib.py  test_igraph.py  test_networkx.py  test_tempfile.py  test_treelib.py
