[tool.poetry]
name = "familytreelib"
version = "0.0.3"
description = ""
authors = ["Koliy82 <sokol070804@mail.ru>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
treelib = "^1.7.0"

[tool.poetry.group.test.dependencies]
mongomock = "^4.1.2"
setuptools = "^73.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
